--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
+    - name: Remove Git Tags with Charts
+      run: git tag -d $(git tag -l "helm-chart-*")
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
