--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,8 @@
+release:
+  footer: |
+    ## Docker Images
+    - `paskalmaksim/telegram-gateway:latest`
+    - `paskalmaksim/telegram-gateway:{{ .Tag }}`
 dockers:
 - goos: linux
   goarch: amd64
