--- a/charts/telegram-gateway/Chart.yaml
+++ b/charts/telegram-gateway/Chart.yaml
@@ -1,4 +1,8 @@
 apiVersion: v2
 icon: https://helm.sh/img/helm.svg
 name: telegram-gateway
-version: 1.0.1
+version: 1.0.2
+description: Telegram gateway for Prometheus and Sentry
+maintainers:
+- name: maksim-paskal  # Maksim Paskal
+  email: paskal.maksim@gmail.com
