--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,14 +1,34 @@
+project_name: telegram-gateway
 release:
   footer: |
     ## Docker Images
-    - `paskalmaksim/telegram-gateway:latest`
-    - `paskalmaksim/telegram-gateway:{{ .Tag }}`
+    - `paskalmaksim/{{.ProjectName}}:latest`
+    - `paskalmaksim/{{.ProjectName}}:{{.Tag}}`
 dockers:
-- goos: linux
+- use: buildx
+  goos: linux
   goarch: amd64
   image_templates:
-  - paskalmaksim/telegram-gateway:latest
-  - paskalmaksim/telegram-gateway:{{ .Tag }}
+  - paskalmaksim/{{.ProjectName}}:latest
+  - paskalmaksim/{{.ProjectName}}:{{.Tag}}
+  build_flag_templates:
+  - "--platform=linux/amd64"
+  - "--label=org.opencontainers.image.created={{.Date}}"
+  - "--label=org.opencontainers.image.title={{.ProjectName}}"
+  - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+  - "--label=org.opencontainers.image.version={{.Version}}"
+- use: buildx
+  goos: linux
+  goarch: arm64
+  image_templates:
+  - paskalmaksim/{{.ProjectName}}:latest
+  - paskalmaksim/{{.ProjectName}}:{{.Tag}}
+  build_flag_templates:
+  - "--platform=linux/arm64/v8"
+  - "--label=org.opencontainers.image.created={{.Date}}"
+  - "--label=org.opencontainers.image.title={{.ProjectName}}"
+  - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+  - "--label=org.opencontainers.image.version={{.Version}}"
 builds:
 - dir: ./cmd
   env:
@@ -21,6 +41,7 @@ builds:
   - linux
   goarch:
   - amd64
+  - arm64
 checksum:
   name_template: 'checksums.txt'
 snapshot:
