--- a/charts/telegram-gateway/templates/telegram-gateway.yaml
+++ b/charts/telegram-gateway/templates/telegram-gateway.yaml
@@ -16,6 +16,10 @@ spec:
       labels:
         app: telegram-gateway
     spec:
+{{ if .Values.nodeSelector }}
+      nodeSelector:
+{{ toYaml .Values.nodeSelector | indent 8 }}
+{{ end }}
 {{ if .Values.tolerations }}
       tolerations:
 {{ toYaml .Values.tolerations | indent 6 }}
