--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,22 +3,22 @@ release:
   footer: |
     ## Docker Images
     - `paskalmaksim/{{.ProjectName}}:latest`
-    - `paskalmaksim/{{.ProjectName}}:{{.Version}}`
+    - `paskalmaksim/{{.ProjectName}}:{{if .IsSnapshot}}{{.Version}}{{else}}{{.Tag}}{{end}}`
 docker_manifests:
 - name_template: paskalmaksim/{{.ProjectName}}:latest
   image_templates:
-  - paskalmaksim/{{.ProjectName}}:{{.Version}}-amd64
-  - paskalmaksim/{{.ProjectName}}:{{.Version}}-arm64
-- name_template: paskalmaksim/{{.ProjectName}}:{{.Version}}
+  - paskalmaksim/{{.ProjectName}}:{{if .IsSnapshot}}{{.Version}}{{else}}{{.Tag}}{{end}}-amd64
+  - paskalmaksim/{{.ProjectName}}:{{if .IsSnapshot}}{{.Version}}{{else}}{{.Tag}}{{end}}-arm64
+- name_template: paskalmaksim/{{.ProjectName}}:{{if .IsSnapshot}}{{.Version}}{{else}}{{.Tag}}{{end}}
   image_templates:
-  - paskalmaksim/{{.ProjectName}}:{{.Version}}-amd64
-  - paskalmaksim/{{.ProjectName}}:{{.Version}}-arm64
+  - paskalmaksim/{{.ProjectName}}:{{if .IsSnapshot}}{{.Version}}{{else}}{{.Tag}}{{end}}-amd64
+  - paskalmaksim/{{.ProjectName}}:{{if .IsSnapshot}}{{.Version}}{{else}}{{.Tag}}{{end}}-arm64
 dockers:
 - use: buildx
   goos: linux
   goarch: amd64
   image_templates:
-  - paskalmaksim/{{.ProjectName}}:{{.Version}}-amd64
+  - paskalmaksim/{{.ProjectName}}:{{if .IsSnapshot}}{{.Version}}{{else}}{{.Tag}}{{end}}-amd64
   build_flag_templates:
   - "--platform=linux/amd64"
   - "--label=org.opencontainers.image.created={{.Date}}"
@@ -29,7 +29,7 @@ dockers:
   goos: linux
   goarch: arm64
   image_templates:
-  - paskalmaksim/{{.ProjectName}}:{{.Version}}-arm64
+  - paskalmaksim/{{.ProjectName}}:{{if .IsSnapshot}}{{.Version}}{{else}}{{.Tag}}{{end}}-arm64
   build_flag_templates:
   - "--platform=linux/arm64"
   - "--label=org.opencontainers.image.created={{.Date}}"
